package NStreams;

message TCodeGenInput {
    message TFactorDescriptor {
        required string Name = 1;
        required string CppCode = 2;
        required int32  Level = 3;
    }

    repeated TFactorDescriptor Factor = 1;
}
